--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,17 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/sanctum": "^4.0",
+        "laravel/tinker": "^2.10.1",
+        "spatie/laravel-permission": "^6.18"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -19,6 +24,10 @@
         "nunomaduro/collision": "^8.6"
     },
     "autoload": {
+        "files": [
+            "app/Utilities/GeneralUtilities.php",
+            "app/Utilities/ResponseUtilities.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
